Bump versions.